==> ChibiOS/ChibiOS-Contrib/os/hal/ports/SILABS/LLD/EFR32FG23/GPIOv1/hal_pal_lld.c <==
#include "hal.h"

void _pal_lld_init(const PALConfig* config) {

#if PAL_USE_CALLBACKS || PAL_USE_WAIT || defined(__DOXYGEN__)
  int i;

  for (i = 0; i < 16; i++) {
    _pal_init_event(i);
  }
#endif

  /*
   * Enables the GPIO related clocks.
   */
  CMU->CLKEN0_SET = CMU_CLKEN0_GPIO;

  /*
   * Initial GPIO setup.
   */
  GPIO_PORT(GPIOA)->CTRL  = config->PAData.ctrlr;
  GPIO_PORT(GPIOA)->MODEL = config->PAData.modelr;
  GPIO_PORT(GPIOA)->MODEH = config->PAData.modehr;
  GPIO_PORT(GPIOA)->DOUT  = config->PAData.doutr;

  GPIO_PORT(GPIOB)->CTRL  = config->PBData.ctrlr;
  GPIO_PORT(GPIOB)->MODEL = config->PBData.modelr;
  GPIO_PORT(GPIOB)->MODEH = config->PBData.modehr;
  GPIO_PORT(GPIOB)->DOUT  = config->PBData.doutr;

  GPIO_PORT(GPIOC)->CTRL  = config->PCData.ctrlr;
  GPIO_PORT(GPIOC)->MODEL = config->PCData.modelr;
  GPIO_PORT(GPIOC)->MODEH = config->PCData.modehr;
  GPIO_PORT(GPIOC)->DOUT  = config->PCData.doutr;

  GPIO_PORT(GPIOD)->CTRL  = config->PDData.ctrlr;
  GPIO_PORT(GPIOD)->MODEL = config->PDData.modelr;
  GPIO_PORT(GPIOD)->MODEH = config->PDData.modehr;
  GPIO_PORT(GPIOD)->DOUT  = config->PDData.doutr;

#if (PAL_USE_WAIT || PAL_USE_CALLBACKS) || defined(__DOXYGEN__)
  nvicEnableVector(EFR32_GPIO_ODD_NUMBER, EFR32_GPIO_ODD_IRQ_PRIORITY);
  nvicEnableVector(EFR32_GPIO_EVEN_NUMBER, EFR32_GPIO_EVEN_IRQ_PRIORITY);
#endif
}

void _pal_lld_setgroupmode(ioportid_t port,
                           ioportmask_t mask,
                           iomode_t mode) {

  uint32_t pad = 0;

  osalDbgCheck(mask <= PAL_WHOLE_PORT);

  while (mask) {
    if ((mask & 1) != 0) {
      _pal_lld_setpadmode(port, pad, mode);
      _pal_lld_setalternatefunction(port, pad, mode);
    }

    mask >>= 1;
    pad++;
  }
}

void _pal_lld_enablepadevent(ioportid_t port,
                             iopadid_t pad,
                             ioeventmode_t mode) {

  uint32_t int_no = pad;
  uint32_t rising_edge, falling_edge;

  osalDbgCheck(pad < GPIO_PORT_SIZE(port));

  switch (mode & PAL_EVENT_MODE_EDGES_MASK) {
    default:
    case PAL_EVENT_MODE_DISABLED:
      rising_edge = 0U;
      falling_edge = 0U;
      break;
    case PAL_EVENT_MODE_RISING_EDGE:
      rising_edge = 1U;
      falling_edge = 0U;
      break;
    case PAL_EVENT_MODE_FALLING_EDGE:
      rising_edge = 0U;
      falling_edge = 1U;
      break;
    case PAL_EVENT_MODE_BOTH_EDGES:
      rising_edge = 1U;
      falling_edge = 1U;
      break;
  }

  if (int_no < 8) {
    /* The EXTIPSELL register controls pins 0-7. */
    _pal_lld_reg_masked_write(&GPIO->EXTIPSELL, 0b11UL << (4U * int_no), GPIO_PORT_INDEX(port) << (4U * int_no));
    /* The EXTIPINSELL register controls interrupt 0-7. */
    _pal_lld_reg_masked_write(&GPIO->EXTIPINSELL, 0b11UL << (4U * int_no), (uint32_t)((pad % 4) & 0b11UL) << (4U * int_no));
  } else {
    uint32_t tmp = int_no - 8;
    /* EXTIPSELH controls pins 8-15 of the interrupt configuration. */
    _pal_lld_reg_masked_write(&GPIO->EXTIPSELH, 0b11UL << (4U * tmp), GPIO_PORT_INDEX(port) << (4U * tmp));
    /* EXTIPINSELH controls interrupt 8-15 of the interrupt/pin number mapping. */
    _pal_lld_reg_masked_write(&GPIO->EXTIPINSELH, 0b11UL << (4U * tmp), (uint32_t)((pad % 4) & 0b11UL) << (4U * tmp));
  }

  /* Enable/disable the rising edge interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->EXTIRISE), (1U << int_no), (rising_edge << int_no));

  /* Enable/disable the falling edge interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->EXTIFALL), (1U << int_no), (falling_edge << int_no));

  /* Clear any pending interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->IF_CLR), (1U << int_no), (1U << int_no));

  /* Finally enable/disable interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->IEN), (1U << int_no), (1U << int_no));
}

void _pal_lld_disablepadevent(ioportid_t port, iopadid_t pad) {

  (void)port;

  uint32_t int_no = pad;

  /* Disable the rising edge interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->EXTIRISE), (1U << int_no), (0U << int_no));

  /* Disable the falling edge interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->EXTIFALL), (1U << int_no), (0U << int_no));

  /* Finally disable interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->IEN), (1U << int_no), (0U << int_no));

  /* Clear any pending interrupt. */
  _pal_lld_reg_masked_write(&(GPIO->IF_CLR), (1U << int_no), (1U << int_no));
}
